added ga tracking and dotenv example

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta property="og:url" content="https://timer.tkarimdesign.com">
+    <meta property="og:title" content="React Timer">
+    <meta property="og:description" content="Simple timer app built on top of React and Redux.">
+    <meta property="og:image" content="https://timer.tkarimdesign.com/images/react-timer.jpg">
+    <meta property="og:image:secure_url" content="https://timer.tkarimdesign.com/images/react-timer.jpg">
+    <meta property="og:type" content="website">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -26,6 +32,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118057042-1"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
