--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118057042-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=%REACT_APP_GA%"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
