changed references to react-timer to simple-tracker

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <meta property="og:url" content="https://timer.tkarimdesign.com">
-    <meta property="og:title" content="React Timer">
+    <meta property="og:title" content="Simple Tracker">
     <meta property="og:description" content="Simple timer app built on top of React and Redux.">
-    <meta property="og:image" content="https://timer.tkarimdesign.com/images/react-timer.jpg">
-    <meta property="og:image:secure_url" content="https://timer.tkarimdesign.com/images/react-timer.jpg">
+    <meta property="og:image" content="https://timer.tkarimdesign.com/images/app.jpg">
+    <meta property="og:image:secure_url" content="https://timer.tkarimdesign.com/images/app.jpg">
     <meta property="og:type" content="website">
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React Timer</title>
+    <title>Simple Tracker</title>
   </head>
   <body class="grey lighten-3">
     <noscript>
